infra/k8s/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl # Deployment Name
spec:
  replicas: 1
  # Selector of pods
  selector:
    matchLabels:
      app: gateway
  # Template for pods
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: lucasscola/teleworker-gateway
          # Enviroment variables for this app
