infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl # Deployment Name
spec:
  replicas: 1
  # Selector of pods
  selector:
    matchLabels:
      app: auth
  # Template for pods
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: lucasscola/teleworker-auth
          # Enviroment variables for this app
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
