infra/k8s/devices-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devices-depl # Deployment Name
spec:
  replicas: 1
  # Selector of pods
  selector:
    matchLabels:
      app: devices
  # Template for pods
  template:
    metadata:
      labels:
        app: devices
    spec:
      containers:
        - name: devices
          image: lucasscola/teleworker-devices
          # Volume mount for configMap
          volumeMounts:
          - name: config
            mountPath: "/etc/config"
            readOnly: true
          # Enviroment variables for this app
      volumes:
        # Config Map with custom configuration
        - name: config
          configMap:
            name: blueprints-conf
---
apiVersion: v1
kind: Service
metadata:
  name: devices-srv
spec:
  selector:
    app: devices
  ports:
    - name: devices
      protocol: TCP
      port: 3000
      targetPort: 3000
