infra/k8s/passwords-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passwords-depl # Deployment Name
spec:
  replicas: 1
  # Selector of pods
  selector:
    matchLabels:
      app: passwords
  # Template for pods
  template:
    metadata:
      labels:
        app: passwords
    spec:
      containers:
        - name: passwords
          image: lucasscola/teleworker-passwords
          # Volume mount for configMap
          volumeMounts:
          - name: config
            mountPath: "/etc/config"
            readOnly: true
          # Enviroment variables for this app
      volumes:
        # Config Map with custom configuration
        - name: config
          configMap:
            name: blueprints-conf
---
apiVersion: v1
kind: Service
metadata:
  name: passwords-srv
spec:
  selector:
    app: passwords
  ports:
    - name: passwords
      protocol: TCP
      port: 3000
      targetPort: 3000
