infra/k8s/passwords-mongo-depl.yaml
# Downloads mongo container from dockerhub
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passwords-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passwords-mongo
  template:
    metadata:
      labels:
        app: passwords-mongo
    spec:
      containers:
        - name: passwords-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: passwords-mongo-srv
spec:
  selector:
    app: passwords-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
